# BioluminescentJungle

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.MIT  NOTICE.md  README.md
shaders/: butterflies.comp  butterflies.vert  compress_lods.comp  denoiser.frag  direct-light.comp  displacement.frag  displacement.frag.spv  displacement.vert  displacement.vert.spv  emissive-texture.frag  geometry.glsl  global_fog.frag  material-color.frag  material-color.vert  move_lods.comp  noise3D.glsl  point-debug.vert  point-light.frag  point-light.geom  point-light.vert  reflection-texture.frag  restir-eval.comp  restir.glsl  shader.frag  shader.vert  shader.vert.spv  simple-texture-wind.vert  simple-texture.frag  simple-texture.frag.spv  simple-texture.vert  simple-texture.vert.spv  taa.frag  tonemap.frag  tonemap.vert  update_lods.comp  util.glsl  water.vert  whole_screen.vert  wind.glsl
src/: BVH.hpp  DataBuffer.cpp  DataBuffer.h  Denoiser.cpp  Denoiser.h  GBufferDescription.h  GlobalFog.cpp  GlobalFog.h  GlslIncluder.hpp  JungleApp.cpp  JungleApp.h  LightGrid.hpp  Lighting.cpp  Lighting.h  MusicPlayer.cpp  MusicPlayer.h  PhysicalDevice.cpp  PhysicalDevice.h  Pipeline.cpp  Pipeline.h  PostProcessing.cpp  PostProcessing.h  PostProcessingStep.h  Raytracing.hpp  Scene.cpp  Scene.h  Swapchain.cpp  Swapchain.h  TAA.cpp  TAA.h  Tonemap.cpp  Tonemap.h  UniformBuffer.cpp  UniformBuffer.h  VulkanHelper.cpp  VulkanHelper.h  main.cpp
